added endpoint to return all mayor names (#14)
* added endpoint to return all mayor names

* add cache header
